# hecate

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  HACKING.md  README.md  Taskfile.yml  bootstrap.bat  build.bat  vcpkg.json
.github/workflows/: ci.yml  ubuntu.yml  windows.yml
cmake/: StandardSettings.cmake  StaticAnalyzers.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake  vcpkg.cmake  vulkan.cmake
docs/: Geometric Algebra.md  Notes.md  Project setup.md  Tasking.md  Windows High DPI notes.md  utf8.md
docs/.obsidian/: workspace
source/: lib.cpp
src/app/: CMakeLists.txt  main.cpp
src/hecate/: CMakeLists.txt  dependencies.h  hecate.cpp  hecate.h  preprocessor.h
src/hecate/app/: application.cpp  application.h
src/hecate/core/: engine.cpp  engine.h  engine.inl  logger.cpp  logger.h  mediator.h  mediator.inl  system.cpp  system.h  system.inl
src/hecate/core/detail/: mediator_queue.h  mediator_queue.inl
src/hecate/core/logger/: log_category.cpp  log_category.h  log_message.cpp  log_message.h  log_message.inl  log_sink.cpp  log_sink.h  log_sink.inl
src/hecate/graphics/: device.h  graphics.cpp  graphics.h  surface.h  surface_state.cpp  surface_state.h
src/hecate/input/: input.cpp  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/hecate/os/: window.h
src/hecate/platform/: platform.h  platform_strings.h  platform_strings_win32.cpp  platform_win32.cpp  window.h  window_win32.cpp
src/hecate/util/: algorithm.h  algorithm.inl  biguint.h  biguint.inl  cast.h  cast.inl  concepts.h  debugger.cpp  debugger.h  debugger.inl  endian.h  endian.inl  filesystem.cpp  flat_map.h  flat_map.inl  function.h  function.inl  literals.h  literals.inl  memory.h  memory.inl  spin_mutex.cpp  spin_mutex.h  string_util.cpp  string_util.h  string_util.inl  threads.cpp  threads.h  typemap.h  typemap.inl  unique_resource.h  unique_resource.inl  utf8.h  utf8.inl
src/hecate/util/codec/: base_n.h  base_n.inl  codepage_1252.h  codepage_1252.inl  utf.cpp  utf.h  utf.inl
test/: CMakeLists.txt
test/hecate/: CMakeLists.txt  unittest.cpp
test/source/: hecate_test.cpp  hecatex_test.cpp
test/util/: test_algorithm.cpp  test_function.cpp
